syntax = "proto3";

package net.dehora.grpc.spike.helloworld;

option java_multiple_files = true;
option java_package = "net.dehora.grpc.spike.helloworld";
option java_outer_classname = "HelloWorldProto";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}